--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@600;300&display=swap"
       rel="stylesheet"
     />
 
