--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,11 @@
       crossorigin="anonymous"
     />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Karla:wght@600;300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik&display=swap"
       rel="stylesheet"
