skillbars; final fixes for live

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Darian Nocera's Web Development & Design Portfolio."
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Darian Nocera | Developer & Designer.</title>
 
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
