styling update and restrucutre scss architecture

--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,13 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Darian Nocera | Developer & Designer.</title>
 
+    <!-- BOOTSTRAP CSS  -->
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
+    <!-- FONT AWESOME  -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -38,6 +40,7 @@
       crossorigin="anonymous"
     />
 
+    <!-- FONTS  -->
     <link
       href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;500&display=swap"
       rel="stylesheet"
@@ -48,6 +51,7 @@
       rel="stylesheet"
     />
 
+    <!-- AOS ANIMATION LIBRARY CSS  -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -56,9 +60,13 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-W84KP2TJDC"
     ></script>
 
+    <!-- AOS ANIMATION LIBRARY JS  -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
+    <!-- JQUERY  -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- BOOTSTRAP & POPPER JS  -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
@@ -68,6 +76,7 @@
     ></script>
   </head>
   <body>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -78,6 +87,7 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
