--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,21 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+
+    <!-- META PROPERTIES  -->
     <meta
       name="description"
       content="Darian Nocera's Web Development & Design Portfolio."
     />
+    <meta property="og:title" content="Darian Nocera" />
+    <meta
+      property="og:description"
+      content="Darian Nocera's Web Development & Design Portfolio."
+    />
+    <meta propery="og:url" content="https://www.dnocera.com" />
+    <meta property="og:site_name" content="Darian Nocera" />
+    <meta property="og:locale" content="en_US" />
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Darian Nocera | Developer & Designer.</title>
 
@@ -76,7 +87,6 @@
     ></script>
   </head>
   <body>
-
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -87,7 +97,7 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
+
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
