switching to bob ross template

--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google Tag Manager -->
-    <script>
-      (function(w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-P5W7GPC");
-    </script>
-    <!-- End Google Tag Manager -->
-
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
 
-    <!-- META PROPERTIES  -->
-    <meta
+    <!-- START META PROPERTIES  -->
+
+    <!-- <meta
       name="description"
-      content="Darian Nocera's Web Development & Design Portfolio."
+      content="My Web Development & Design Portfolio."
     />
-    <meta property="og:title" content="Darian Nocera" />
+    <meta property="og:title" content="My Name" />
     <meta
       property="og:description"
-      content="Darian Nocera's Web Development & Design Portfolio."
+      content="My Web Development & Design Portfolio."
     />
-    <meta propery="og:url" content="https://www.dnocera.com" />
-    <meta property="og:site_name" content="Darian Nocera" />
-    <meta property="og:locale" content="en_US" />
+    <meta propery="og:url" content="My Website URL" />
+    <meta property="og:site_name" content="My Name />
+    <meta property="og:locale" content="en_US" /> -->
+
+    <!-- END META PROPERTIES  -->
 
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>Darian Nocera | Developer & Designer.</title>
+    <title>My Portfolio</title>
 
     <!-- BOOTSTRAP CSS  -->
     <link
